--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,45 +4,65 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".login.Signup">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/mojivet"/>
+        android:text="@string/mojivet"
+        android:gravity="center"
+        android:textSize="50sp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/create_new_account"/>
+        android:text="@string/create_new_account"
+        android:gravity="center"
+        android:textSize="28sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/already_registered"/>
+            android:gravity="center"
+            android:text="@string/already_registered"
+            android:textSize="18sp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/log_in_here"
             android:clickable="true"
-            android:focusable="true"/>
+            android:focusable="true"
+            android:textSize="18sp"
+            android:textColor="@color/bright_blue"/>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/name"/>
+        android:text="@string/name"
+        android:layout_marginLeft="40dp"/>
 
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_margin="5sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:hint="@string/juan_dela_cruz"
         android:drawableLeft="@drawable/baseline_person_24"
         android:drawablePadding="20dp"/>
@@ -50,12 +70,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/email"/>
+        android:text="@string/email"
+        android:layout_marginLeft="40dp"/>
 
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_margin="5sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:hint="@string/example_gmail_com"
         android:inputType="textEmailAddress"
         android:drawableLeft="@drawable/baseline_email_24"
@@ -64,12 +86,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/password"/>
+        android:text="@string/password"
+        android:layout_marginLeft="40dp"/>
 
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_margin="5sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:hint="@string/char_pass"
         android:inputType="textPassword"
         android:drawableLeft="@drawable/baseline_lock_24"
@@ -78,21 +102,27 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/confirm_password"/>
+        android:text="@string/confirm_password"
+        android:layout_marginLeft="40dp"/>
 
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_margin="5sp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:hint="@string/char_pass"
         android:inputType="textPassword"
         android:drawableLeft="@drawable/baseline_lock_24"
         android:drawablePadding="20dp"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="35dp"/>
+
     <Button
         android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:textSize="20dp"
-        android:text="@string/sign_up"/>
+        android:layout_height="60dp"
+        android:text="@string/sign_up"
+        android:textSize="20dp" />
 
 </LinearLayout>
