--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,64 +6,97 @@
     android:orientation="vertical"
     tools:context=".login.Login">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Mojivet"/>
+        android:layout_height="50dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"/>
+        android:text="Mojivet"
+        android:textSize="50sp"
+        android:gravity="center"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="30dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:gravity="center"
+        android:textSize="30sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Don't have an account?"/>
+            android:text="Don't have an account?"
+            android:textSize="20sp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign up."
-            android:clickable="true"/>
+            android:clickable="true"
+            android:textSize="20sp"
+            android:textColor="@color/bright_blue"/>
     </LinearLayout>
 
-    <TextView
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="80dp"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="EMAIL"/>
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5sp"
-        android:hint="example@gmail.com"
-        android:drawableLeft="@drawable/baseline_email_24"
-        android:drawablePadding="20dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="EMAIL"
+            android:layout_marginLeft="40dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="PASSWORD"/>
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5sp"
+            android:hint="example@gmail.com"
+            android:drawableLeft="@drawable/baseline_email_24"
+            android:drawablePadding="20dp"/>
 
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5sp"
-        android:hint="********"
-        android:inputType="textPassword"
-        android:drawableLeft="@drawable/baseline_lock_24"
-        android:drawablePadding="20dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="PASSWORD"
+            android:layout_marginLeft="40dp"/>
 
-    <Button
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:textSize="20dp"
-        android:text="Log in"/>
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5sp"
+            android:hint="********"
+            android:inputType="textPassword"
+            android:drawableLeft="@drawable/baseline_lock_24"
+            android:drawablePadding="20dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="30dp"/>
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:text="Log in"
+            android:textSize="20dp" />
+    </LinearLayout>
 
 </LinearLayout>
