--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -6,35 +6,56 @@
     android:orientation="vertical"
     tools:context=".login.ForgotPassword">
 
-    <!-- TODO: Update blank fragment layout -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="70dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/mojivet"/>
+        android:text="@string/mojivet"
+        android:gravity="center"
+        android:textSize="60sp"/>
+    
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/forgot_password"/>
+        android:text="@string/forgot_password"
+        android:gravity="center"
+        android:textSize="25sp"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="130dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/email"/>
+        android:text="@string/email"
+        android:layout_marginLeft="60dp"/>
 
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_margin="5sp"
+        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawablePadding="20dp"
         android:hint="@string/example_gmail_com"
         android:inputType="textEmailAddress"
-        android:drawableLeft="@drawable/baseline_email_24"
-        android:drawablePadding="20dp"/>
+        android:layout_gravity="center"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="20dp"/>
 
     <Button
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:textSize="20sp"
-        android:text="@string/send_code"/>
+        android:text="@string/send_code"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
