--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -46,6 +46,7 @@
             android:layout_width="350dp"
             android:layout_height="55dp"
             android:hint="@string/date"
+            android:inputType="date"
             android:layout_marginTop="130dp"
             android:layout_marginStart="30dp"/>
 
