--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -14,10 +14,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="45dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:src="@drawable/borger"
-            >
-
+            android:contentDescription="@string/cats_and_dogs">
         </ImageView>
 
         <TextView
