--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".login.ForgotPassword">
 
@@ -31,31 +32,28 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/email"
-        android:layout_marginLeft="60dp"/>
 
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="5sp"
-        android:drawableLeft="@drawable/baseline_email_24"
-        android:drawablePadding="20dp"
-        android:hint="@string/example_gmail_com"
-        android:inputType="textEmailAddress"
-        android:layout_gravity="center"/>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="350dp"
+        android:layout_height="55dp"
+        android:hint="@string/email"
+        android:layout_marginStart="30dp"
+        android:textAlignment="viewStart">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="20dp"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/baseline_email_24"
+            android:drawablePadding="10dp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:textSize="20sp"
         android:text="@string/send_code"
+        android:layout_marginTop="20dp"
         android:layout_gravity="center"/>
 
 </LinearLayout>
