internet permissions allowed + build gradle added retrofit, gson, and api request
Signed-off-by: Jamessysystem <smenardjames@gmail.com>

--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -43,7 +43,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Spinner
+        <Button
             android:id="@+id/spin_date"
             android:layout_width="350dp"
             android:layout_height="55dp"
