--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,102 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".login.Login">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="50dp"/>
+    android:gravity="center"
+    tools:context=".login.Signup"
+    android:background="@drawable/headerbg">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Mojivet"
-        android:textSize="50sp"
-        android:gravity="center"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="30dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/mojivet"
         android:gravity="center"
-        android:textSize="30sp"/>
+        android:textSize="50sp"/>
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Don't have an account?"
-            android:textSize="20sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sign up."
-            android:clickable="true"
-            android:textSize="20sp"
-            android:textColor="@color/bright_blue"/>
-    </LinearLayout>
+        android:text="@string/create_new_account"
+        android:gravity="center"
+        android:textSize="28sp"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="80dp"/>
+        android:layout_height="40dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <EditText
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/juan_dela_cruz"
+        android:drawableLeft="@drawable/baseline_person_24"
+        android:drawablePadding="20dp"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="EMAIL"
-            android:layout_marginLeft="40dp"/>
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/example_gmail_com"
+        android:inputType="textEmailAddress"
+        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawablePadding="20dp"/>
 
-        <EditText
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="5sp"
-            android:hint="example@gmail.com"
-            android:drawableLeft="@drawable/baseline_email_24"
-            android:drawablePadding="20dp"/>
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/char_pass"
+        android:inputType="textPassword"
+        android:drawableLeft="@drawable/baseline_lock_24"
+        android:drawablePadding="20dp"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="PASSWORD"
-            android:layout_marginLeft="40dp"/>
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:hint="@string/cpass"
+        android:inputType="textPassword"
+        android:drawableLeft="@drawable/baseline_lock_24"
+        android:drawablePadding="20dp"/>
 
-        <EditText
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="5sp"
-            android:hint="********"
-            android:inputType="textPassword"
-            android:drawableLeft="@drawable/baseline_lock_24"
-            android:drawablePadding="20dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="35dp"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="30dp"/>
-
-        <Button
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:text="Log in"
-            android:textSize="20dp" />
-    </LinearLayout>
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:text="@string/sign_up"
+        android:textSize="20dp" />
 
 </LinearLayout>
