--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".nav_bottom.Home"
-    android:id="@+id/home">
+    tools:context=".nav_bottom.Appointment"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/borger"
+            android:contentDescription="@string/cats_and_dogs">
+        </ImageView>
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="MojiVet"
+            android:layout_marginTop="50dp"
+            android:textSize="35sp"
+            android:layout_marginStart="140dp"
+            android:textStyle="bold"
+            />
+
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/home" />
+        android:layout_marginBottom="60dp">
 
-</FrameLayout>
+        <ImageView
+            android:src="@drawable/beauty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ImageView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="240dp"
+            android:textSize="20dp"
+            android:textColor="#000000"
+            android:text="Welcome to MojiVet!"
+            android:textStyle="bold"
+            android:layout_marginLeft="20dp">
+
+        </TextView>
+        <TextView
+            android:text="Schedule your pet's
+appointment easily and experience tailored
+veterinary excellence"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:layout_marginTop="260dp"
+            android:layout_marginLeft="20dp">
+
+        </TextView>
+
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
