--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -66,6 +66,7 @@
             android:layout_marginLeft="40dp"/>
 
         <EditText
+            android:id="@+id/LogInEmail"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_margin="5sp"
@@ -80,6 +81,7 @@
             android:layout_marginLeft="40dp"/>
 
         <EditText
+            android:id="@+id/LogInPassword"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_margin="5sp"
@@ -96,7 +98,8 @@
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:text="Log in"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:id="@+id/LogInButton"/>
     </LinearLayout>
 
 </LinearLayout>
