--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -10,18 +10,33 @@
     android:background="@drawable/headerbg">
 
     <TextView
+        android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/mojivet"
         android:gravity="center"
-        android:textSize="50sp"/>
+        android:textSize="50sp"
+        android:textColor="#333333"
+        android:textStyle="bold"
+        android:shadowColor="#C0C0C0"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/create_new_account"
-        android:textSize="28sp" />
+        android:textSize="28sp"
+        android:textColor="#333333"
+        android:padding="16dp"
+        android:elevation="4dp"
+        android:layout_margin="16dp"
+        android:textStyle="bold"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowColor="#C0C0C0"/>
 
     <View
         android:layout_width="match_parent"
