--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -131,22 +131,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp"
+            android:orientation="horizontal"
+            android:gravity="center"
             android:background="@drawable/text_border"
-            android:gravity="center">
+            android:padding="8dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/already_registered"/>
+                android:gravity="center"
+                android:text="@string/already_registered"
+                android:textSize="18sp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/log_in_here"
                 android:clickable="true"
                 android:focusable="true"
-                android:text="@string/log_in_here"
+                android:textSize="18sp"
                 android:textColor="@color/bright_blue"/>
 
         </LinearLayout>
