Changed login,signup, and forgotpassword from fragments to activity.
Signed-off-by: Jamessysystem <smenardjames@gmail.com>

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".login.ForgotPassword">
+    tools:context=".profiling.ForgotPassword">
 
     <View
         android:layout_width="match_parent"
@@ -16,7 +15,7 @@
         android:text="@string/mojivet"
         android:gravity="center"
         android:textSize="60sp"/>
-    
+
     <View
         android:layout_width="match_parent"
         android:layout_height="15dp"/>
