--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".login.Signup"
-    android:background="@drawable/headerbg">
+    android:background="@drawable/headerbg"
+    tools:context=".profiling.Signup">
+
 
     <TextView
         android:id="@+id/textViewTitle"
@@ -48,14 +49,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        card_view:cardCornerRadius="8dp">
+        app:cardCornerRadius="8dp">
 
-        <EditText
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:hint="@string/first_name"
+        android:layout_gravity="center"
+        app:startIconDrawable="@drawable/baseline_person_24">
+
+        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/juan_dela_cruz"
-            android:padding="10dp"
-            android:background="@drawable/text_border"/>
+            android:inputType="textPersonName"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
     </androidx.cardview.widget.CardView>
 
 
@@ -64,15 +72,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        card_view:cardCornerRadius="8dp">
+        app:cardCornerRadius="8dp">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/lname"
-            android:textSize="20sp"
-            android:padding="10dp"
-            android:background="@drawable/text_border"/>
+            android:layout_height="55dp"
+            android:hint="@string/email"
+            android:layout_gravity="center"
+            app:startIconDrawable="@drawable/baseline_email_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
     </androidx.cardview.widget.CardView>
 
 
@@ -81,32 +95,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        card_view:cardCornerRadius="8dp">
+        app:cardCornerRadius="8dp">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/emailll"
-            android:textSize="20sp"
-            android:padding="10dp"
-            android:background="@drawable/text_border"/>
-    </androidx.cardview.widget.CardView>
+            android:layout_height="55dp"
+            android:hint="@string/password"
+            android:layout_gravity="center"
+            app:startIconDrawable="@drawable/baseline_lock_24">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        card_view:cardCornerRadius="8dp">
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/passs"
-            android:padding="10dp"
-            android:textSize="20sp"
-            android:background="@drawable/text_border"/>
+        </com.google.android.material.textfield.TextInputLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
@@ -114,15 +117,21 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        card_view:cardCornerRadius="8dp">
+        app:cardCornerRadius="8dp">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/cpass"
-            android:padding="10dp"
-            android:textSize="20sp"
-            android:background="@drawable/text_border"/>
+            android:layout_height="55dp"
+            android:hint="@string/confirm_password"
+            android:layout_gravity="center"
+            app:startIconDrawable="@drawable/baseline_lock_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
     </androidx.cardview.widget.CardView>
 
     <View
@@ -133,7 +142,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:text="@string/sign_up"
-        android:textSize="20dp"/>
+        android:textSize="20sp"/>
 
 
     <androidx.cardview.widget.CardView
@@ -142,14 +151,13 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:layout_gravity="center"
-        card_view:cardCornerRadius="2dp">
+        app:cardCornerRadius="2dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:background="@drawable/text_border"
             android:padding="8dp">
 
             <TextView
@@ -173,3 +181,4 @@
 
 
 </LinearLayout>
+
