--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".nav_bottom.Appointment"
     android:id="@+id/home"
     android:orientation="vertical">
@@ -11,29 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="45dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/borger"
-            android:contentDescription="@string/cats_and_dogs">
-        </ImageView>
-
-        <TextView
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="MojiVet"
-            android:layout_marginTop="50dp"
-            android:textSize="35sp"
-            android:layout_marginStart="140dp"
-            android:textStyle="bold"
-            />
-
-    </androidx.cardview.widget.CardView>
+        android:layout_height="wrap_content"/>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,7 +19,8 @@
         <ImageView
             android:src="@drawable/beauty"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:contentDescription="@string/dog">
 
         </ImageView>
 
@@ -50,24 +28,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="240dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="#000000"
-            android:text="Welcome to MojiVet!"
+            android:text="@string/welcome_to_mojivet"
             android:textStyle="bold"
-            android:layout_marginLeft="20dp">
+            android:layout_marginStart="20dp">
 
         </TextView>
         <TextView
-            android:text="Schedule your pet's
-appointment easily and experience tailored
-veterinary excellence"
+            android:text="@string/schedule_your_pet_s_appointment_easily_and_experience_tailored_veterinary_excellence"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="#000000"
             android:layout_marginTop="260dp"
-            android:layout_marginLeft="20dp">
+            android:layout_marginStart="20dp">
 
         </TextView>
 
