--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,17 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".profiling.ForgotPassword">
+    tools:context=".profiling.ForgotPassword"
+    android:background="@drawable/headerbg">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="70dp"/>
     <TextView
+        android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/mojivet"
         android:gravity="center"
-        android:textSize="60sp"/>
+        android:textSize="50sp"
+        android:textColor="#333333"
+        android:textStyle="bold"
+        android:shadowColor="#C0C0C0"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"/>
 
     <View
         android:layout_width="match_parent"
@@ -23,9 +31,17 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/forgot_password"
         android:gravity="center"
-        android:textSize="25sp"/>
+        android:text="@string/forgot_password"
+        android:textSize="28sp"
+        android:textColor="#333333"
+        android:padding="16dp"
+        android:elevation="4dp"
+        android:layout_margin="16dp"
+        android:textStyle="bold"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowColor="#C0C0C0"/>
 
     <View
         android:layout_width="match_parent"
@@ -43,7 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/baseline_email_24"
-            android:drawablePadding="10dp"/>
+            android:drawablePadding="10dp"
+            android:background="@drawable/text_border"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
