--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -21,7 +21,8 @@
             android:textColor="#333333"
             android:shadowColor="#C0C0C0"
             android:shadowDy="2"
-            android:shadowDx="2"/>
+            android:shadowDx="2"
+            android:shadowRadius="3"/>
 
 
     </androidx.cardview.widget.CardView>
@@ -44,7 +45,11 @@
                 android:layout_marginTop="380dp"
                 android:text="@string/paws_and_hooves_hearts_and_health_where_compassion_meets_care"
                 android:textSize="25sp"
-                android:textStyle="bold">
+                android:textStyle="bold"
+                android:shadowRadius="3"
+                android:shadowColor="#C0C0C0"
+                android:shadowDy="2"
+                android:shadowDx="2">
 
             </TextView>
             <TextView
